fix: tables now use monospaced font accross the app, headers and rows aligned with more control now

--- a/src/app/pages/quickMaps/pages/costEffectiveness/interventionReview/pages/interventionBaseline/interventionBaseline.component.scss
+++ b/src/app/pages/quickMaps/pages/costEffectiveness/interventionReview/pages/interventionBaseline/interventionBaseline.component.scss
@@ -70,12 +70,12 @@ table {
     }
   }
 
-  th {
-    &.mat-mdc-header-cell {
-      border-bottom: none;
-      text-align: left !important;
-    }
-  }
+  // th {
+  //   &.mat-mdc-header-cell {
+  //     border-bottom: none;
+  //     text-align: left !important;
+  //   }
+  // }
 }
 
 .intervention-baseline-panel {
